<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AngrySimon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_score_board">ScoreBoardActivity</string>
    <string name="game_over">Game Over!</string>
    <string name="score">Score: </string>
    <string name="title_main_screen"> Angry Simon</string>
    <string name="name_text">Name: </string>
    <string name="finish">Finish</string>
    <string name="save_score">Save Score</string>
    <string name="play_again">Play Again</string>
    <string name="play_classic">Classic</string>
    <string name="play_angry">Angry</string>
    <string name="play_rage">Rage</string>
    <string name="visit_scoreboard">High Scores</string>
    <string name="title_description">Welcome to Angry Simon</string>

</resources>
